--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>90's R&B Trivia</title>
+  <link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+
 </head>
 <body>
   <div id="header" role="heading">
@@ -13,6 +16,7 @@
   <div  id="container">
     <section id="starter-page" role="main">
       <h2>So you think you really know 90's R&B</h2>
+      <img src="http://vh1.mtvnimages.com/uri/mgid:ao:image:mtv:441952?quality=0.8&format=jpg&height=495&width=660" />
       <h3>Click below to find out!</h3>
       <button id="js-start-button">Start</button>
     </section>
