--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div  id="container">
     <section id="starter-page" role="main">
       <h2>So you think you really know 90's R&B</h2>
-      <img src="http://vh1.mtvnimages.com/uri/mgid:ao:image:mtv:441952?quality=0.8&format=jpg&height=495&width=660" />
+      <img src="http://vh1.mtvnimages.com/uri/mgid:ao:image:mtv:441952?quality=0.8&format=jpg&height=495&width=660" alt="SWV Album Cover" />
       <h3>Click below to find out!</h3>
       <button id="js-start-button">Start</button>
     </section>
